syntax = "proto3";
package commercionetwork.commercionetwork.documents;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/documents/types";

// Import section
import "gogoproto/gogo.proto";
import "commercionetwork/documents/documentDoSign.proto";
import "commercionetwork/documents/documentEncryptionData.proto";
import "commercionetwork/documents/documentMetadataSchema.proto";
import "commercionetwork/documents/documentChecksum.proto";


message Document {
  string sender = 1; 
  repeated string recipients = 2; 
  string UUID = 3; 
  documents.DocumentMetadata metadata = 4; 
  string contentURI = 5; 
  documents.DocumentChecksum checksum = 6; 
  documents.DocumentEncryptionData encryptionData = 7 [
    (gogoproto.moretags)   = "yaml:\"encryption_data\"",
    (gogoproto.customtype) = "DocumentEncryptionData",
    (gogoproto.nullable)   = true
  ]; 
  documents.DocumentDoSign doSign = 8 [
    (gogoproto.moretags)   = "yaml:\"do_sign\"",
    (gogoproto.customtype) = "DocumentDoSign",
    (gogoproto.nullable)   = true
  ];
}

